# project-braid

./: README.md  demo_happy_path.sh  main.py  signaling_server.py
braid/: __init__.py  cli.py  emulator.py  manifest.py  session_link.py  signaling_server.py
braid-rs/: Cargo.toml
braid-rs/src/: cli.rs  emulator.rs  gui.rs  hash.rs  main.rs  manifest.rs  nat.rs  session_link.rs  signaling.rs
