[package]
name = "braid-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
sha1 = "0.10"
clap = { version = "4.5", features = ["derive"] }
open = "5.0"
egui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "net", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
uuid = { version = "1.7", features = ["v4"] }
url = "2.5"